--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                <div class="header">
                   <h3>Learn More About HoneyBook With A Demo</h3>
                </div>
-               <div class="icon-close">
+               <div id="close" class="icon-close">
                   <i class="fa fa-close"></i>
                </div>
                <div class="content-submission">
