updated styles and whatnot

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <HEAD>
    <TITLE>My first HTML document</TITLE>
    <link rel="stylesheet" type="text/css" href="css/fly-out.css"></link>
-   <link rel="stylesheet" type="text/css" href="http://daneden.github.io/animate.css/animate.min.css"></link>
-   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+   <link rel="stylesheet" type="text/css" href="https://daneden.github.io/animate.css/animate.min.css"></link>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
    <script src="js/fly-out.js"></script>
 </HEAD>
@@ -22,13 +22,13 @@
          <div class="content">
             <div class="inner-content">
                <div class="header">
-                  <h3>Learn More About HoneyBook With A Demo</h3>
+                  <h3>Learn more with a free consultation</h3>
                </div>
                <div id="close" class="icon-close">
                   <i class="fa fa-close"></i>
                </div>
                <div class="content-submission">
-                  <script charset="utf-8" src="http://js.hsforms.net/forms/current.js"></script>
+                  <script charset="utf-8" src="https://js.hsforms.net/forms/current.js"></script>
                   <script>
                     hbspt.forms.create({ 
                       portalId: '421588',
@@ -39,7 +39,7 @@
                </div>
             </div>
          </div>
-   	</div>
+   	  </div>
    </div>
 </BODY>
 </HTML>
